Support mKCP, remove pac server.

--- a/V2RayX/config-sample.plist
+++ b/V2RayX/config-sample.plist
@@ -23,10 +23,10 @@
 		<dict>
 			<key>auth</key>
 			<string>noauth</string>
-			<key>ip</key>
-			<string>127.0.0.1</string>
 			<key>udp</key>
 			<false/>
+			<key>ip</key>
+			<string>127.0.0.1</string>
 		</dict>
 	</dict>
 	<key>log</key>
@@ -38,6 +38,11 @@
 	<dict>
 		<key>protocol</key>
 		<string>vmess</string>
+		<key>streamSettings</key>
+		<dict>
+			<key>network</key>
+			<string>tcp</string>
+		</dict>
 		<key>settings</key>
 		<dict>
 			<key>vnext</key>
@@ -50,14 +55,116 @@
 					<key>users</key>
 					<array>
 						<dict>
-							<key>alterId</key>
-							<integer>64</integer>
 							<key>id</key>
 							<string>23ad6b10-8d1a-40f7-8ad0-e3e35cd38297</string>
+							<key>alterId</key>
+							<integer>64</integer>
 						</dict>
 					</array>
 				</dict>
 			</array>
+		</dict>
+	</dict>
+	<key>outboundDetour</key>
+	<array>
+		<dict>
+			<key>protocol</key>
+			<string>freedom</string>
+			<key>settings</key>
+			<dict/>
+			<key>tag</key>
+			<string>direct</string>
+		</dict>
+	</array>
+	<key>routing</key>
+	<dict>
+		<key>strategy</key>
+		<string>rules</string>
+		<key>settings</key>
+		<dict>
+			<key>domainStrategy</key>
+			<string>IPIfNonMatch</string>
+			<key>rules</key>
+			<array>
+				<dict>
+					<key>type</key>
+					<string>field</string>
+					<key>port</key>
+					<string>1-52</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>field</string>
+					<key>port</key>
+					<string>54-79</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>field</string>
+					<key>port</key>
+					<string>81-442</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>field</string>
+					<key>port</key>
+					<string>444-65535</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>chinasites</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>field</string>
+					<key>ip</key>
+					<array>
+						<string>0.0.0.0/8</string>
+						<string>10.0.0.0/8</string>
+						<string>100.64.0.0/10</string>
+						<string>127.0.0.0/8</string>
+						<string>169.254.0.0/16</string>
+						<string>172.16.0.0/12</string>
+						<string>192.0.0.0/24</string>
+						<string>192.0.2.0/24</string>
+						<string>192.168.0.0/16</string>
+						<string>198.18.0.0/15</string>
+						<string>198.51.100.0/24</string>
+						<string>203.0.113.0/24</string>
+						<string>::1/128</string>
+						<string>fc00::/7</string>
+						<string>fe80::/10</string>
+					</array>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+				<dict>
+					<key>type</key>
+					<string>chinaip</string>
+					<key>outboundTag</key>
+					<string>direct</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>
+	<key>transport</key>
+	<dict>
+		<key>kcpSettings</key>
+		<dict>
+			<key>uplinkCapacity</key>
+			<integer>1</integer>
+			<key>downlinkCapacity</key>
+			<integer>10</integer>
 		</dict>
 	</dict>
 </dict>
