Update v2ray to v1.23.1 Support mKCP type SRTP

--- a/V2RayX/config-sample.plist
+++ b/V2RayX/config-sample.plist
@@ -161,6 +161,11 @@
 	<dict>
 		<key>kcpSettings</key>
 		<dict>
+			<key>header</key>
+			<dict>
+				<key>type</key>
+				<string>srtp</string>
+			</dict>
 			<key>uplinkCapacity</key>
 			<integer>1</integer>
 			<key>downlinkCapacity</key>
