--- a/V2RayX/config-sample.plist
+++ b/V2RayX/config-sample.plist
@@ -155,58 +155,22 @@
 			<key>rules</key>
 			<array>
 				<dict>
-					<key>outboundTag</key>
-					<string>direct</string>
-					<key>port</key>
-					<string>1-52</string>
-					<key>type</key>
-					<string>field</string>
-				</dict>
-				<dict>
-					<key>outboundTag</key>
-					<string>direct</string>
-					<key>port</key>
-					<string>54-79</string>
-					<key>type</key>
-					<string>field</string>
-				</dict>
-				<dict>
-					<key>outboundTag</key>
-					<string>direct</string>
-					<key>port</key>
-					<string>81-442</string>
-					<key>type</key>
-					<string>field</string>
-				</dict>
-				<dict>
-					<key>outboundTag</key>
-					<string>direct</string>
-					<key>port</key>
-					<string>444-65535</string>
-					<key>type</key>
-					<string>field</string>
-				</dict>
-				<dict>
 					<key>ip</key>
 					<array>
-						<string>0.0.0.0/8</string>
-						<string>10.0.0.0/8</string>
-						<string>100.64.0.0/10</string>
-						<string>127.0.0.0/8</string>
-						<string>169.254.0.0/16</string>
-						<string>172.16.0.0/12</string>
-						<string>192.0.0.0/24</string>
-						<string>192.0.2.0/24</string>
-						<string>192.168.0.0/16</string>
-						<string>198.18.0.0/15</string>
-						<string>198.51.100.0/24</string>
-						<string>203.0.113.0/24</string>
-						<string>::1/128</string>
-						<string>fc00::/7</string>
-						<string>fe80::/10</string>
+						<string>geoip:private</string>
 					</array>
 					<key>outboundTag</key>
 					<string>direct</string>
+					<key>type</key>
+					<string>field</string>
+				</dict>
+				<dict>
+					<key>outboundTag</key>
+					<string>direct</string>
+					<key>domain</key>
+					<array>
+						<string>localhost</string>
+					</array>
 					<key>type</key>
 					<string>field</string>
 				</dict>
