Bug fix #155 & Core updated

--- a/V2RayX/config-sample.plist
+++ b/V2RayX/config-sample.plist
@@ -134,6 +134,19 @@
 			<key>tag</key>
 			<string>direct</string>
 		</dict>
+		<dict>
+			<key>protocol</key>
+			<string>blackhole</string>
+			<key>type</key>
+			<string></string>
+			<key>settings</key>
+			<dict>
+				<key>type</key>
+				<string>http</string>
+			</dict>
+			<key>tag</key>
+			<string>blockout</string>
+		</dict>
 	</array>
 	<key>policy</key>
 	<dict>
@@ -162,6 +175,19 @@
 					<key>domain</key>
 					<array>
 						<string>localhost</string>
+						<string>domain:mzstatic.com</string>
+						<string>domain:me.com</string>
+						<string>domain:lookup-api.apple.com</string>
+						<string>domain:itunes.com</string>
+						<string>domain:itunes.apple.com</string>
+						<string>domain:icloud-content.com</string>
+						<string>domain:icloud.com</string>
+						<string>domain:cdn-apple.com</string>
+						<string>domain:apple-cloudkit.com</string>
+						<string>domain:apple.com</string>
+						<string>domain:apple.co</string>
+						<string>domain:aaplimg.com</string>
+						<string>domain:guzzoni.apple.com</string>
 					</array>
 				</dict>
 				<dict>
