Bug fix #155 & Core updated

--- a/V2RayX/config-sample.plist
+++ b/V2RayX/config-sample.plist
@@ -162,6 +162,19 @@
 					<key>domain</key>
 					<array>
 						<string>localhost</string>
+						<string>domain:mzstatic.com</string>
+						<string>domain:me.com</string>
+						<string>domain:lookup-api.apple.com</string>
+						<string>domain:itunes.com</string>
+						<string>domain:itunes.apple.com</string>
+						<string>domain:icloud-content.com</string>
+						<string>domain:icloud.com</string>
+						<string>domain:cdn-apple.com</string>
+						<string>domain:apple-cloudkit.com</string>
+						<string>domain:apple.com</string>
+						<string>domain:apple.co</string>
+						<string>domain:aaplimg.com</string>
+						<string>domain:guzzoni.apple.com</string>
 					</array>
 				</dict>
 				<dict>
